# ampass-secure-vault

./: .env  .gitignore
.kiro/steering/: ampass-architecture.md  extension-development.md  security-rules.md
ampass/: .gitignore  .htaccess  README.md  index.php  manifest.webmanifest  sw.js
ampass/app/: .htaccess  version.php
ampass/app_storage/: .htaccess
ampass/config/: .htaccess  config.sample.php
ampass/database/: .htaccess  schema.sql
ampass/docs/: BACKUP-RESTORE.md  BROWSER-DESKTOP-BRIDGE.md  CPANEL-ONE-CLICK-UPDATES.md  DESKTOP-QA.md  DOWNLOADS-QA.md  EMAIL-RESEND.md  ONEDRIVE-BACKUP-SETUP.md  QA.md  RELEASE-CHECKLIST.md  REMOTE-BACKUPS.md  UPDATER.md  VERSIONING.md  version.json
ampass/install/: .htaccess  index.php
clients/browser-extension/: README.md  SECURITY.md  manifest.json
clients/desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
clients/desktop-tauri/src-tauri/src/: backup.rs  lib.rs  lock.rs  native_messaging.rs  storage.rs  tray.rs
clients/native-messaging/: README.md  chrome-host-manifest.json  firefox-host-manifest.json  install-windows.bat  uninstall-windows.bat
release/: BUILD-BROWSER-EXTENSION.md  BUILD-DESKTOP-WINDOWS.md  CHANGELOG.md  INSTALL-BROWSER-EXTENSION.md  INSTALL-CPANEL.md  INSTALL-DESKTOP.md  INSTALL-XAMPP.md  PUBLISH-DOWNLOADS.md  SECURITY.md
release/browser-extension/: PACKAGE-CONTENTS.md
release/desktop-tauri/: PACKAGE-CONTENTS.md
release/php-web/: PACKAGE-CONTENTS.md
scripts/: build-desktop-windows.ps1  sync-version.php
src/: routeTree.gen.ts  styles.css
supabase/: config.toml
(+122 files in other folders)
